--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">CollegeHub</string>
+    <string name="page_title">Home</string>
+    <string name="more">More</string>
+    <string name="content_description_more">More options</string>
 </resources>
